--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "parser": "node parser.js",
     "graph": "node graph.js",
     "queryBuilder": "node queryBuilder.js"
