--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node test.js",
     "parser": "node parser.js",
     "graph": "node graph.js",
-    "queryBuilder": "node queryBuilder.js"
+    "queryBuilder": "node queryBuilder.js",
+    "push": "prisma db push"
   },
   "keywords": [],
   "author": "",
