--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js",
-    "graph": "node graph.js",
-    "queryBuilder": "node queryBuilder.js",
+    "search": "node runSearch.js",
     "push": "prisma db push"
   },
   "keywords": [],
